# Sigma

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  imgui.ini  run.bat
assets/shaders/: Heart.fx  HighlightHeart.fx  base_textured_pixel.hlsl  face_highlight.hlsl  render_mesh.hlsl
assets/static_objects/: wooden_cube_LICENSE.txt
src/: main.cpp
src/Engine/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  ComPtrUtils.h  Component.h  Direct3DRenderer.cpp  Direct3DRenderer.h  GameContext.h  GameObject.cpp  GameObject.h  ImGuiManager.cpp  ImGuiManager.h  InputManager.cpp  InputManager.h  Material.h  Mesh.cpp  Mesh.h  MeshRendererComponent.cpp  MeshRendererComponent.h  PathUtils.cpp  PathUtils.h  RenderManager.cpp  RenderManager.h  RotationComponents.cpp  RotationComponents.h  Scene.cpp  Scene.h  SceneObject.h  SceneSettings.h  SceneSettingsIO.cpp  SceneSettingsIO.h  SelectionComponent.cpp  SelectionComponent.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TransformComponent.cpp  TransformComponent.h  (+1 more)
src/Game/: HeartScene.cpp  HeartScene.h  SampleScene.cpp  SampleScene.h  WoodCubeScene.cpp  WoodCubeScene.h
src/Game/HeartScene/: HeartScene.xml
src/Game/SampleScene/: SampleScene.xml
